--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "@shadcn/ui": "^0.0.4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "react": "19.1.0",
